2010-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make provision to protect user's profile settings during upgrade.

	* Makefile.in (install): Remove `profile.xml'; replace it with...
	(install-profile): ...this new prerequisite installation goal; it
	renames the installed copy of `profile.xml' as `defaults.xml', within
	the installed package image.

	* src/pkgkeys.h (defaults_key): New key; declare it.
	* src/pkgkeys.c: Some cosmetic formatting (tabulation) adjustments.
	(defaults_key): Implement it; it refers to the `defaults.xml' file.

	* src/climain.cpp (climain): Check `profile_key' for accessibility of
	the `profile.xml' file; if [! R_OK] emit a diagnostic warning, fall
	back on `defaults_key', and attempt to load configuration from the
	distributed `defaults.xml' file.

2010-05-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add preliminary support for future `-reinstall' option.

	* src/pkgexec.cpp (pkgActionItem::Execute) [ACTION_INSTALL]: Force
	installation if `-reinstall' option is selected, overriding state of
	any prior installation; temporarily assume that this option is always
	selected, to permit proper `upgrade' operation in the absence of any
	functional `uninstall' capability, and pending implementation of a
	mechanism for interpreting user specified options.

2010-05-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct handling for "%R" macro in relative sysroot path specs.

	* src/tarproc.cpp (pkgTarArchiveProcessor): In constructor, expand the
	sysroot path specification a second time, to capture the effect of any
	embedded macros, before computing the recorded `sysroot_len' value.

2010-05-05  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle "%" wildcard matches in package and subsystem version strings.

	* src/pkgbase.h (pkgSpecs): Forward declare it.
	(pkgActionItem::~pkgActionItem): Declare explicit destructor.
	(pkgActionItem::SetRequirements): Add extra `pkgSpecs*' argument;