@@ -1,3 +1,12 @@
+2010-05-17  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	mingw-get-0.1-mingw32-alpha-2 released.
+
+	* README: Add new release notes.
+
+	* xml/profile.xml: Update to use default referencing for...
+	(package-list.xml.lzma): ...this repository master catalogue.
+
 2010-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Make provision to protect user's profile settings during upgrade.
